--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
         <h2>💞 Our Sweet Love Story</h2>
         <p>
           It all began at <b>Neharika’s birthday party</b>, when
-          <b>Surja</b> first met <b>Dhvani</b>. Neharika’s aunty asked them both
+          <b>Diwa</b> first met <b>Shru</b>. Neharika’s aunty asked them both
           to help serve drinks to the guests. That simple moment of teamwork
           sparked a quiet connection.
         </p>
@@ -428,13 +428,13 @@
           the beach, where waves witnessed their growing bond. 🌊
         </p>
         <p>
-          Life took Dhvani to <b>Natakar</b> for studies. But distance only made
-          them stronger. Surja, with his friends <b>Janu</b> and <b>Rupa</b>,
-          went on a trip where Dhvani joined— one of the most beautiful trips of
+          Life took Shru to <b>Natakar</b> for studies. But distance only made
+          them stronger. Diwa, with his friends <b>Janu</b> and <b>Rupa</b>,
+          went on a trip where Shru joined— one of the most beautiful trips of
           their lives. 🌸
         </p>
         <p>
-          From then on, Surja and Dhvani became two hearts, close and caring,
+          From then on, Diwa and Shru became two hearts, close and caring,
           wrapped in love and happiness. 💖
         </p>
       </div>
