--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
       <div class="box-content">
         <h2>💞 Our Sweet Love Story</h2>
         <p>
-          It all began at <b>Neharika’s birthday party</b>, when
+          It all began at <b>Neha’s birthday party</b>, when
           <b>Diwa</b> first met <b>Shru</b>. Neharika’s aunty asked them both
           to help serve drinks to the guests. That simple moment of teamwork
           sparked a quiet connection.
