--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
         <h2>💞 Our Sweet Love Story</h2>
         <p>
           It all began at <b>Neha’s birthday party</b>, when
-          <b>Diwa</b> first met <b>Shru</b>. Neharika’s aunty asked them both
+          <b>Diwa</b> first met <b>Shru</b>. Neha’s mom asked them both
           to help serve drinks to the guests. That simple moment of teamwork
           sparked a quiet connection.
         </p>
