--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
           the beach, where waves witnessed their growing bond. 🌊
         </p>
         <p>
-          Life took Shru to <b>Natakar</b> for studies. But distance only made
+          Life took Shru to <b>Karnataka</b> for studies. But distance only made
           them stronger. Diwa, with his friends <b>Janu</b> and <b>Rupa</b>,
           went on a trip where Shru joined— one of the most beautiful trips of
           their lives. 🌸
